# Backend-PAT

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 9f1fac4f399e_create_all_table.py  b20ea57be190_create_other_remaining_table.py  e5d697f322fd_first_commit.py
app/: main.py
app/alembic/versions/: b943f447f6b5_first_commit.py
app/api/v1/endpoints/: user.py
app/core/: config.py
app/crud/: user.py
app/db/: __init__.py  base.py  init_db.py  session.py
app/db/models/: ai_interaction.py  auth.py  course.py  learning_resources.py  notifications.py  progress.py  user.py
app/models/: user.py
app/schemas/: progress.py  user.py
