[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Melvin5585 <mbhoni99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
docker = "^7.1.0"
mysql-connector-python = "^9.0.0"
sqlalchemy = "^2.0.31"
pymysql = "^1.1.1"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
